feat: adiciona cadastro e listagem de eventos - Ajuste doc
